--- a/v1/Prototype.ipynb
+++ b/v1/Prototype.ipynb
@@ -3,6 +3,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Esta abordagem é filtragem colaborativa baseada em itens (item-based collaborative filtering)\n",
         "!pip install pandas numpy scipy scikit-learn"
       ],
       "metadata": {
@@ -65,8 +66,28 @@
       "source": [
         "#Mapear IDs para índices e criar matriz esparsa\n",
         "\n",
-        "#Mapear userId e movieId para índices contínuos\n",
+        "#O objetivo aqui é transformar os IDs originais (que não são sequenciais)\n",
+        "#em índices contínuos (0, 1, 2, ...) — algo necessário para criar uma matriz.\n",
+        "\n",
+        "#Cria dicionários de mapeamento de IDs para índices\n",
+        "#Cada linha em ratings representa uma avaliação feita por um usuário a um filme\n",
+        "#.unique() retorna um array NumPy contendo apenas os valores distintos de uma coluna, na ordem em que aparecem\n",
+        "#enumerate() transforma uma sequência em pares (índice, valor)\n",
+        "'''Se ratings.csv contiver:\n",
+        "   | userId | movieId | rating |\n",
+        "   | ------ | ------- | ------ |\n",
+        "   | 10     | 5       | 3.5    |\n",
+        "   | 42     | 2       | 4.0    |\n",
+        "   | 10     | 7       | 2.0    |\n",
+        "   Então user_mapper = {10: 0, 42: 1}, movie_mapper = {5: 0, 2: 1, 7: 2}\n",
+        "   Usuário 10 vira linha 0, Usuário 42 vira linha 1\n",
+        "   Filme 5 vira coluna 0, Filme 2 vira coluna 1, Filme 7 vira coluna 2\n",
+        "   Matriz esparsa ficará com shape (2, 3) — 2 usuários × 3 filmes.\n",
+        "'''\n",
+        "\n",
+        "#Cria mapeamento de cada userId único para um índice sequencial\n",
         "user_mapper = {uid: i for i, uid in enumerate(ratings['userId'].unique())}\n",
+        "#Cria mapeamento de cada movieId único para um índice sequencial\n",
         "movie_mapper = {mid: i for i, mid in enumerate(ratings['movieId'].unique())}\n",
         "\n",
         "#Mapear IDs originais para índices\n",
@@ -77,6 +98,18 @@
         "ratings_sparse = csr_matrix(\n",
         "    (ratings['rating'], (ratings['user_idx'], ratings['movie_idx']))\n",
         ")\n",
+        "\n",
+        "'''Com o exemplo usado antes:\n",
+        "   user_mapper = {10: 0, 42: 1}\n",
+        "   movie_mapper = {5: 0, 2: 1, 7: 2}\n",
+        "   A matriz de usuários × filmes fica:        5     2     7\n",
+        "                                       U10 [ 3.5   0.0   2.0 ]\n",
+        "                                       U42 [ 0.0   4.0   0.0 ]\n",
+        "   Então a representação esparsa (armazenando só valores != 0) fica:\n",
+        "            (0,0)  3.5 --> user 10, movie 5\n",
+        "            (0,2)  2.0 --> user 10, movie 7\n",
+        "            (1,1)  4.0 --> user 42, movie 2\n",
+        "'''\n",
         "\n",
         "#Mapeamento inverso (para retornar IDs originais)\n",
         "movie_inv_mapper = {i: mid for mid, i in movie_mapper.items()}\n",
@@ -97,8 +130,9 @@
       "source": [
         "#Calcular similaridade entre filmes\n",
         "\n",
-        "#Transpor para ter filmes nas linhas (necessário para filme-filme similarity)\n",
-        "#dense_output=False mantém saída esparsa\n",
+        "#.T = operador de transposição. ratings_sparse tem usuários nas linhas e filmes nas colunas\n",
+        "#Transposição é feita para ter filmes nas linhas (necessário para filme-filme similarity)\n",
+        "#dense_output=False mantém saída esparsa.\n",
         "movie_similarity = cosine_similarity(ratings_sparse.T, dense_output=False)\n",
         "\n",
         "print(\"Matriz de similaridade entre filmes calculada!\")"
@@ -106,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "id": "4f17a3cd-902e-41a8-9981-16d86725c771",
       "metadata": {
         "id": "4f17a3cd-902e-41a8-9981-16d86725c771"
@@ -115,30 +149,32 @@
       "source": [
         "#Função para recomendar filmes similares\n",
         "#Retorna os top_n filmes mais similares a um movie_id dado\n",
-        "\n",
         "def recommend_movies(movie_id, top_n=5):\n",
         "    #Obter índice do filme\n",
         "    if movie_id not in movie_mapper:\n",
         "        print(f\"Filme {movie_id} não encontrado.\")\n",
         "        return []\n",
         "\n",
+        "    #Converte movie_id original para o índice interno da matriz\n",
         "    movie_idx = movie_mapper[movie_id]\n",
         "\n",
-        "    #Similaridade do filme com todos os outros\n",
+        "    #Extrai a linha correspondente do filme na matriz de similaridade\n",
+        "    #(cada valor indica o quão parecido é com outro filme)\n",
         "    sim_scores = movie_similarity[movie_idx].toarray().flatten()\n",
         "\n",
-        "    #Criar série com movie_idx como índice\n",
+        "    #Cria uma Series (vetor do pandas) com os scores de similaridade, movie_idx como índice\n",
         "    sim_series = pd.Series(sim_scores, index=range(len(sim_scores)))\n",
         "\n",
-        "    #Top N similares (excluindo o próprio)\n",
+        "    #Seleciona os índices dos filmes mais similares, em ordem decrescente\n",
+        "    #iloc[1:] ignora o próprio filme (similaridade = 1 consigo mesmo)\n",
         "    top_indices = sim_series.sort_values(ascending=False).iloc[1:top_n+1].index\n",
         "\n",
-        "    #Recuperar títulos e scores\n",
+        "    #Monta a lista de recomendações (título e valor da similaridade)\n",
         "    recommendations = []\n",
         "    for idx in top_indices:\n",
-        "        mid = movie_inv_mapper[idx]\n",
-        "        title = movies.loc[movies.movieId == mid, 'title'].values[0]\n",
-        "        score = sim_series[idx]\n",
+        "        mid = movie_inv_mapper[idx]                                   #Converte índice interno de volta para movieId original\n",
+        "        title = movies.loc[movies.movieId == mid, 'title'].values[0]  #Busca título do filme\n",
+        "        score = sim_series[idx]                                       #Similaridade calculada\n",
         "        recommendations.append((title, score))\n",
         "\n",
         "    return recommendations"
@@ -166,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 12,
       "id": "2fed2c65-2ab1-48aa-9c17-404982a48387",
       "metadata": {
         "id": "2fed2c65-2ab1-48aa-9c17-404982a48387"
@@ -175,35 +211,43 @@
       "source": [
         "#Função para recomendar para um usuário\n",
         "#Retorna recomendações para um usuário baseado em ratings passados e similaridade filme-filme\n",
-        "\n",
         "def recommend_for_user(user_id, top_n=5):\n",
+        "    #Obter índice do usuário\n",
         "    if user_id not in user_mapper:\n",
         "        print(f\"Usuário {user_id} não encontrado.\")\n",
         "        return []\n",
         "\n",
+        "    #Converte user_id original para o índice interno da matriz\n",
         "    user_idx = user_mapper[user_id]\n",
         "\n",
-        "    #Filmes avaliados pelo usuário\n",
+        "    #Filmes avaliados pelo usuário (linha do usuário na matriz)\n",
+        "    #Converte a linha esparsa para array e achata para vetor 1D\n",
         "    user_ratings = ratings_sparse[user_idx, :].toarray().flatten()\n",
+        "\n",
+        "    #Pega os índices dos filmes avaliados (notas > 0)\n",
         "    rated_indices = np.where(user_ratings > 0)[0]\n",
         "\n",
-        "    #Score agregado inicial\n",
+        "    #Vetor inicial para acumular scores de recomendação\n",
+        "    #(um valor predito para cada filme)\n",
         "    scores = np.zeros(ratings_sparse.shape[1])\n",
         "\n",
-        "    #Para cada filme avaliado, acumular score ponderado pela similaridade\n",
+        "    '''Para cada filme que o usuário avaliou:\n",
+        "       - pega as similaridades desse filme com todos os outros\n",
+        "       - soma uma contribuição proporcional à nota que o usuário deu'''\n",
         "    for idx in rated_indices:\n",
         "        sim_scores = movie_similarity[idx].toarray().flatten()\n",
         "        scores += sim_scores * user_ratings[idx]\n",
         "\n",
-        "    #Remover filmes já avaliados\n",
+        "    #Zera os scores dos filmes já avaliados para não recomendar algo que o usuário já viu\n",
         "    scores[rated_indices] = 0\n",
         "\n",
-        "    #Top N recomendações\n",
+        "    #Seleciona os índices dos filmes com maiores scores preditos\n",
         "    top_indices = np.argsort(scores)[::-1][:top_n]\n",
         "\n",
+        "    #Monta a lista final de recomendações com títulos e pontuações\n",
         "    recommendations = []\n",
         "    for idx in top_indices:\n",
-        "        mid = movie_inv_mapper[idx]\n",
+        "        mid = movie_inv_mapper[idx]   #Converte índice interno para movieId original\n",
         "        title = movies.loc[movies.movieId == mid, 'title'].values[0]\n",
         "        recommendations.append((title, scores[idx]))\n",
         "\n",
