v2 com normalização das notas + ponderação por similaridade
ERRATA: último commit dizia que usamos apenas os top K vizinhos mais similares/próximos. Isto não foi implementado ainda.

--- a/v2/v2_comNormalizacao.ipynb
+++ b/v2/v2_comNormalizacao.ipynb
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "370882ff-4f30-43fb-b3fe-990eadbb4a49",
       "metadata": {
         "id": "370882ff-4f30-43fb-b3fe-990eadbb4a49",
@@ -143,7 +143,7 @@
         "ratings['user_idx'] = ratings['userId'].map(user_mapper)\n",
         "ratings['movie_idx'] = ratings['movieId'].map(movie_mapper)\n",
         "\n",
-        "#NOVO: normalização das notas + ponderação por similaridade (vizinho mais próximo)\n",
+        "#NOVO: normalização das notas + ponderação por similaridade\n",
         "#Usuários têm padrões de avaliação diferentes: uns dão sempre 5 estrelas, outros quase nunca passam de 3.5\n",
         "#Ao calcular a similaridade, devemos centralizar (subtrair a média de cada usuário)\n",
         "#Isso remove o “viés do usuário” e aumenta significativamente a qualidade preditiva do modelo\n",
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "685545e9-51cd-4733-8996-32d64fc18d45",
       "metadata": {
         "id": "685545e9-51cd-4733-8996-32d64fc18d45",
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "4f17a3cd-902e-41a8-9981-16d86725c771",
       "metadata": {
         "id": "4f17a3cd-902e-41a8-9981-16d86725c771"
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "50045a30-4158-4b15-bba7-f207707aad61",
       "metadata": {
         "id": "50045a30-4158-4b15-bba7-f207707aad61",
@@ -296,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "2fed2c65-2ab1-48aa-9c17-404982a48387",
       "metadata": {
         "id": "2fed2c65-2ab1-48aa-9c17-404982a48387"
@@ -355,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "eb300824-2460-42a0-913c-be44e6e56cdc",
       "metadata": {
         "id": "eb300824-2460-42a0-913c-be44e6e56cdc",
