--- a/v4/v4_hibridizacao.ipynb
+++ b/v4/v4_hibridizacao.ipynb
@@ -13,7 +13,7 @@
         "outputId": "a9f16236-2eb0-4965-bd21-34a88cc73713"
       },
       "id": "d9JlDGD4OFIs",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "f7e158e2-fade-45f4-9bad-44dec33cd0ce",
       "metadata": {
         "id": "f7e158e2-fade-45f4-9bad-44dec33cd0ce",
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "370882ff-4f30-43fb-b3fe-990eadbb4a49",
       "metadata": {
         "id": "370882ff-4f30-43fb-b3fe-990eadbb4a49",
@@ -227,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "685545e9-51cd-4733-8996-32d64fc18d45",
       "metadata": {
         "id": "685545e9-51cd-4733-8996-32d64fc18d45",
@@ -286,7 +286,7 @@
         "outputId": "976378d3-12bc-48b6-9448-b1c952418baf"
       },
       "id": "ehYtR-27XNgG",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,9 +344,7 @@
         "\n",
         "<br>**O pipeline:** `alpha` atua como um \"botão de volume\" para duas fontes de verdade.\n",
         "- Para filmes com muitos dados, o alpha = 0.8 garante que a opinião dos usuários (CF) domine a recomendação.\n",
-        "- Para filmes novos (sem dados de CF), o componente (1 - alpha) garante que o conteúdo (Content) ainda possa criar similaridades, permitindo que o filme seja recomendado.\n",
-        "\n",
-        "<BR> ***LEMBRETE: CONFIRMAR SE LÓGICA UTILIZADA E EXPLICAÇÃO ESTÃO CORRETAS COM ALGUMA IA AMANHÃ***"
+        "- Para filmes novos (sem dados de CF), o componente (1 - alpha) garante que o conteúdo (Content) ainda possa criar similaridades, permitindo que o filme seja recomendado."
       ],
       "metadata": {
         "id": "Q1PqhGWebbBt"
@@ -397,7 +395,7 @@
         "id": "vpkKqmePbSAR"
       },
       "id": "vpkKqmePbSAR",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -421,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "4f17a3cd-902e-41a8-9981-16d86725c771",
       "metadata": {
         "id": "4f17a3cd-902e-41a8-9981-16d86725c771"
@@ -463,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "50045a30-4158-4b15-bba7-f207707aad61",
       "metadata": {
         "id": "50045a30-4158-4b15-bba7-f207707aad61",
@@ -511,7 +509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "2fed2c65-2ab1-48aa-9c17-404982a48387",
       "metadata": {
         "id": "2fed2c65-2ab1-48aa-9c17-404982a48387"
@@ -614,7 +612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "eb300824-2460-42a0-913c-be44e6e56cdc",
       "metadata": {
         "id": "eb300824-2460-42a0-913c-be44e6e56cdc",
